# async_io_framework

./: .clang-format  .gitignore  CMakeLists.txt  echo_server.py  readme.md  test_client.cpp  test_server.cpp
docs/: active_cancellation_design_note.md  timer_event_design_note.md
docs/ai/: current_goal.md  decision_log.md  progress.md
include/async_frame/: IOperation.h  async_accept.h  async_connect.h  async_executor.h  async_frame.hpp  async_read.h  async_read_some.h  async_write.h  base.h  buffer.h  cancellation_token.h  connecting.h  connection.h  connector.hpp  do_read.h  do_write.h  drop_last.h  epoll_manager.h  fd_object.h  intermiate.h  multiple_coro.hpp  operator.h  scheduler.h  scheduler_type_traits.h  single_operator.h  task.h  timer.h  try_connect.h  wait_for.h  with_timeout.h
src/: server.cpp
test/: CMakeLists.txt  test_connect.cpp  test_timeout_event.cpp  test_timer.cpp  test_write_read.cpp  test_write_read_withtimeout.cpp
test/unit/: test_async_io.cpp  test_buffer.cpp
